--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       onclick="beforeSubmit()"
     >
       <input type="hidden" name="oid" value="00D5i000001vYN2" />
-      <input type="hidden" name="retURL" value="" />
+      <input
+        type="hidden"
+        name="retURL"
+        value="https://vishalvlogger.github.io/Javascript/index1.html"
+      />
       <input type="hidden" name="Lead_Date__c" class="outputDate" />
       <label for="first_name">First Name</label
       ><input
