--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web to Lead Form</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
@@ -14,6 +15,11 @@
       method="POST"
       onclick="beforeSubmit()"
     >
+      <input
+        type="hidden"
+        name="captcha_settings"
+        value='{"keyname":"WebToLead","fallback":"true","orgId":"00D5i000001vYN2","ts":""}'
+      />
       <input type="hidden" name="oid" value="00D5i000001vYN2" />
       <input
         type="hidden"
@@ -70,6 +76,11 @@
         ><br /> -->
       <label for="lead">Lead Date</label>
       <input type="date" required="true" class="inputDate" />
+      <br />
+      <div
+        class="g-recaptcha"
+        data-sitekey="6LeLP3UpAAAAAAy_nTqm9DaV1Cp6KsJB7sM56-39"
+      ></div>
       <br />
       <input class="submit" type="submit" name="submit" />
     </form>
