--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form
       action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00D5i000001vYN2"
       method="POST"
-      onclick="beforeSubmit()"
+      onclick="beforeSubmit(event)"
     >
       <input
         type="hidden"
